# beehive-monitor

./: .gitignore  .gitmodules  LICENSE  Pipfile  README.org  start-mosquitto.sh  upload.sh
calibration-data/: 2021-10-11-hot-bottle-insulated.data  2021-10-12-hot-bottle-insulated.data  2021-10-12-testo-values.csv  hot-bottle-insulated.data  hot-cup-insulated.data  observation-log.org
calibration-data/2020-10-30-humidity-test-with-silica/: BEE00001.TXT  BEE00002.TXT  BEE00008.TXT  BEE0000A.TXT  BEE0000B.TXT  BEE0000E.TXT  Messungen_2021_11_07_13_42_54_(CET).csv
calibrations/: 2021-10-12.json
data/: 26-percent-17-2-degrees.txt  50-humidity-23-1-temperature.txt  full-message-dump.json
data/2020-10-30-humidity-test-with-silica/: BEE00003.TXT  BEE00004.TXT  BEE00005.TXT  BEE00006.TXT  BEE00007.TXT  BEE00009.TXT  BEE0000C.TXT  BEE0000D.TXT  Messungen_2021_10_30_11_10_49_(CEST).csv
idf/: CMakeLists.txt  build.sh  common.sh  copy-release.sh  flash-release.sh  flash.sh  sdkconfig
idf/main/: CMakeLists.txt  Kconfig  appstate.cpp  appstate.hpp  beehive_events.cpp  beehive_events.hpp  beehive_http.cpp  beehive_http.hpp  display.cpp  display.hpp  io-buttons.cpp  io-buttons.hpp  lora.cpp  lora.hpp  main.cpp  mqtt.cpp  mqtt.hpp  nod.hpp  ota.cpp  ota.hpp  partitions.csv  pins.hpp  roland.cpp  roland.hpp  sdcard.cpp  sdcard.hpp  sensors.cpp  sensors.hpp  smartconfig.cpp  smartconfig.hpp  systemconfig.cpp  systemconfig.hpp  util.cpp  util.hpp  wifi-provisioning.cpp  wifi-provisioning.hpp
py/: Pipfile  README.org  upload.sh
realtime-visualisation/: main.py
scripts/: calibrate.py  calibration-service.py  core-dump-extractor.py  plot-datafile.py  replay-json-dump.py  setup-gui.pyw  show-sdcard-data.py
src/: const.py  index.tpl  main.py  sht3xdis.py  tca9548a.py  webserver.py  wifi.py
(+10 files in other folders)
